RESOLVED FIXED134308
Fix various leaks, RetainPtrs should adopt allocs
https://bugs.webkit.org/show_bug.cgi?id=134308
Summary Fix various leaks, RetainPtrs should adopt allocs
Joseph Pecoraro
Reported 2014-06-25 14:54:44 PDT
Fix a few leaks searching around WebKit2 code where RetainPtr ivars should adopt alloc objects.
Attachments
[PATCH] Proposed Fix (2.47 KB, patch)
2014-06-25 14:55 PDT, Joseph Pecoraro
ap: review+
Joseph Pecoraro
Comment 1 2014-06-25 14:55:43 PDT
Created attachment 233838 [details] [PATCH] Proposed Fix
Alexey Proskuryakov
Comment 2 2014-06-26 23:02:55 PDT
Tim fixed one of these leaks in bug 134368 later. Can you please land the other part of the fix?
Tim Horton
Comment 3 2014-06-26 23:07:34 PDT
Heh, didn't know about this patch, sorry!
Joseph Pecoraro
Comment 4 2014-06-27 11:06:09 PDT
I can land today.
Joseph Pecoraro
Comment 5 2014-06-27 11:14:57 PDT
Note You need to log in before you can comment on or make changes to this bug.