Fix various leaks, RetainPtrs should adopt allocs https://bugs.webkit.org/show_bug.cgi?id=134308

Reviewed by Alexey Proskuryakov.

* WebProcess/InjectedBundle/API/mac/WKWebProcessPlugInBrowserContextController.mm:
(-[WKWebProcessPlugInBrowserContextController _remoteObjectRegistry]):

Canonical link: https://commits.webkit.org/152380@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170540 268f45cc-cd09-0410-ab3c-d52691b4dbfc